--- a/templates/users/index.phtml
+++ b/templates/users/index.phtml
@@ -1,1 +1,12 @@
-<?php
+<form action="/users" method="get">
+    <input type="search" name="u">
+    <input type="submit">
+</form>
+
+<hr>
+
+<ul>
+    <?php foreach ($users as $user) : ?>
+        <li><i><?=$user?></i></li>
+    <?php endforeach; ?>
+</ul>
