Added new template and route for creating users.

--- a/templates/users/index.phtml
+++ b/templates/users/index.phtml
@@ -7,6 +7,6 @@
 
 <ul>
     <?php foreach ($users as $user) : ?>
-        <li><i><?=$user?></i></li>
+        <li><i><?=$user['nickname']?></i></li>
     <?php endforeach; ?>
 </ul>
