--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -1,3 +1,3 @@
-<span>id = <?=htmlspecialchars($id)?></span>
+<span>id = <?=htmlspecialchars($user['id'])?></span>
 <br>
-<span>nickname = user-<?=htmlspecialchars($id)?></span>
+<span>nickname = <?=htmlspecialchars($user['nickname'])?></span>
