--- a/templates/users/index.phtml
+++ b/templates/users/index.phtml
@@ -24,6 +24,6 @@
 
 <ul>
     <?php foreach ($users as $user) : ?>
-        <li><i><?=htmlspecialchars($user['nickname'])?></i></li>
+        <li><i><?=htmlspecialchars($user['nickname'])?> (<?=htmlspecialchars($user['id'])?>)</i></li>
     <?php endforeach; ?>
 </ul>
