--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -6,3 +6,10 @@
     <input type="hidden" name="_METHOD" value="DELETE">
     <input type="submit" value="Remove">
 </form>
+
+<?php if ($session) : ?>
+    <form action="/logout" method="post">
+        <input type="hidden" name="_METHOD" value="DELETE">
+        <input type="submit" value="Logout">
+    </form>
+<?php endif ?>
