--- a/templates/users/login.phtml
+++ b/templates/users/login.phtml
@@ -5,7 +5,7 @@
 <form action="/login" method="post">
     <div>
         <label>Email:</label>
-        <input type="email" required name="user[email]" value="<?=$email?>" placeholder="test@mail.ru">
+        <input type="email" required name="user[email]" value="<?=htmlspecialchars($email)?>" placeholder="test@mail.ru">
     </div>
     <div style="color: red">
         <span><?=$errors['email']?></span>
