Fix tmplates for the cars. Updated class Car. Also updated index.php logic.

--- a/templates/cars/index.phtml
+++ b/templates/cars/index.phtml
@@ -19,6 +19,6 @@
 
 <ul>
     <?php foreach ($cars as $car) : ?>
-        <li><i><?=htmlspecialchars($car['make'])?> (<?=htmlspecialchars($car['id'])?>)</i></li>
+        <li><i><?=htmlspecialchars($car->getMake())?> (<?=htmlspecialchars($car->getId())?>)</i></li>
     <?php endforeach; ?>
 </ul>
