--- a/templates/cars/show.phtml
+++ b/templates/cars/show.phtml
@@ -1,3 +1,3 @@
-<span>id = <?=htmlspecialchars($car['id'])?></span>
+<span>id = <?=htmlspecialchars($car->getId())?></span>
 <br>
-<span>Make = <?=htmlspecialchars($car['make'])?></span>
+<span>Make = <?=htmlspecialchars($car->getMake())?></span>
