Fix bag with undefined array key and fix str_contains(). Fix deprecated parameters to the strtolower().

--- a/templates/users/new.phtml
+++ b/templates/users/new.phtml
@@ -7,14 +7,14 @@
         <label for="user[nickname]">Nickname:</label>
         <input type="text" required name="user[nickname]" value="<?=!empty($data) ? $data['nickname'] : ''?>">
         <?php if (!empty($errors)) : ?>
-            <div style="color: red"><span><?=$errors['nickname']?></span></div>
+            <div style="color: red"><span><?=$errors['nickname'] ?? ''?></span></div>
         <?php endif; ?>
     </div>
     <div>
         <label for="user[email]">Email:</label>
         <input type="email" required name="user[email]" value="<?=!empty($data) ? $data['email'] : ''?>">
         <?php if (!empty($errors)) : ?>
-            <div style="color: red"><span><?=$errors['email']?></span></div>
+            <div style="color: red"><span><?=$errors['email'] ?? ''?></span></div>
         <?php endif; ?>
     </div>
     <input type="submit" value="Create">
