Fix bug with undefined array key

--- a/templates/cars/new.phtml
+++ b/templates/cars/new.phtml
@@ -7,14 +7,14 @@
         <label for="make">Make:</label>
         <input id="make" type="text" required name="car[make]" value="<?=htmlspecialchars($car->getMake())?>">
         <?php if (!empty($errors)) : ?>
-            <div style="color: red"><span><?=$errors['make']?></span></div>
+            <div style="color: red"><span><?=$errors['make'] ?? ''?></span></div>
         <?php endif; ?>
     </div>
     <div>
         <label for="model">Model:</label>
         <input id="model" type="text" required name="car[model]" value="<?=htmlspecialchars($car->getModel())?>">
         <?php if (!empty($errors)) : ?>
-            <div style="color: red"><span><?=$errors['model']?></span></div>
+            <div style="color: red"><span><?=$errors['model'] ?? ''?></span></div>
         <?php endif; ?>
     </div>
     <input type="submit" value="Create">
