--- a/templates/users/index.phtml
+++ b/templates/users/index.phtml
@@ -22,6 +22,13 @@
 
 <hr>
 
+<?php if ($session) : ?>
+    <form action="/logout" method="post">
+        <input type="hidden" name="_METHOD" value="DELETE">
+        <input type="submit" value="Logout">
+    </form>
+<?php endif ?>
+
 <ul>
     <?php foreach ($users as $user) : ?>
         <li><i><?=htmlspecialchars($user['nickname'])?> (<?=htmlspecialchars($user['id'])?>)</i></li>
